[tool.poetry]
name = "dao-zmk-config"
version = "0.1.0"
description = ""
authors = ["Nikolai Oplachko <magnickolas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyelftools = "^0.28"
PyYAML = "^6.0"
pykwalify = "^1.8.0"
canopen = "^2.0.0"
packaging = "^21.3"
progress = "^1.6"
psutil = "^5.9.0"
anytree = "^2.8.0"
intelhex = "^2.3.0"
west = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
